   Preference upgrade is automatic, but if EtherApe detects obsolete parameters 
   the user will be asked to review and confirm the new settings.
   
   Compatibility Warnings: 
     * the link-level xml element is now called 'link-id', instead of simply 
       'link' as in the past releases. 'link' xml elements now refer to 
       node-to-node statistics.

   Changes summary:
     * fix for ticket #100, thanks to Salam for reporting it.
     * diagram refresh command, thanks to Ronald Henderson
     * patch to remove artifact when resizing, thanks to Ronald Henderson
     * xml output now containes also link and global protocols statistics.
     * link fades with averaging times
     * improve statistics repeatability esp. when setting max-delay=0 (useful for tests
       or just to calcolate quickly statistics of a dump file).
     * new no-display mode (command line only), disables diagram updates (again, mostly
       for testing).


  Overview of changes in EtherApe 0.9.19 (Friday, May 15, 2020):

   This is primarily a bugfix release, but thanks to AlexL adds also a Russian
   translation.

   Changes summary:
     * better sizing of connections lines, thanks to Ronald Henderson.
     * fix for ui crash by "MandatoryField"
     * fix a crash happening when the capture process wasn't able to set the filter. 
       Thanks to Benjamin Woods for providing a vital backtrace.
     * russian translation and fixes by AlexL
     * fix for debian bug #958408 from Bernhard Übelacker
       Thanks from Patrick Matthäi for sending the patch upstream

  Overview of changes in EtherApe 0.9.18 (Sunday, June 3, 2018):

   EtherApe now is a pure GTK 3 application, with canvas supplied by GooCanvas
   (https://wiki.gnome.org/Projects/GooCanvas).

   While GooCanvas itself is in maintenance mode, is still the simpler canvas
   library available and with an API almost identical to gnome-canvas, too!
   Longer term, EtherApe ui should be completely redesigned and modernized,