@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkAboutDialog" id="about1">
@@ -8,10 +8,12 @@
     <property name="window_position">center</property>
     <property name="type_hint">normal</property>
     <property name="program_name">EtherApe</property>
-    <property name="copyright" translatable="no">Copyright 2000-2019 Juan Toledo, Riccardo Ghetta</property>
+    <property name="copyright">Copyright 2000-2021 Juan Toledo, Riccardo Ghetta</property>
     <property name="comments" translatable="yes">A Graphical Network Browser.</property>
     <property name="website">http://etherape.sourceforge.io/</property>
     <property name="authors">Juan Toledo &lt;toledo@users.sourceforge.net&gt;
+Riccardo Ghetta &lt;bchiara@users.sourceforge.net&gt;
+
 	    Vincent van Adrighem &lt;vincent@dirck.mine.nu&gt;
 Ben Allen
 Bill Barth &lt;bbarth@users.sourceforge.net&gt;
@@ -20,7 +22,6 @@ Gôrkem Cetin &lt;gorkem@gelecek.com.tr&gt;
 Laurent Deniel &lt;deniel@worldnet.fr&gt;
 Lars Eggert
 David Flamand &lt;dflamand@gmail.com&gt;
-Riccardo Ghetta &lt;bchiara@users.sourceforge.net&gt;
 David Goldfarb
 Simon Kirby &lt;sim@neato.org&gt;
 Pav Lucistnik
@@ -33,6 +34,8 @@ Ted Wright &lt;ted.wright@grc.nasa.gov&gt;
 Dave Yearke &lt;yearke@eng.buffalo.edu&gt;
 
 </property>
+    <property name="documenters">
+</property>
     <property name="translator_credits" translatable="yes">Vincent van Adrighem &lt;vincent@dirck.mine.nu&gt;
 AlexL &lt;alexl000@users.sourceforge.net&gt;
 Gôrkem Cetin &lt;gorkem@gelecek.com.tr&gt;
@@ -42,9 +45,13 @@ Frederic Peters &lt;fpeters@debian.org&gt;
 Daniel Nylander
 </property>
     <property name="logo">etherape.png</property>
+    <property name="license_type">gpl-2-0</property>
     <signal name="delete-event" handler="gtk_widget_hide" swapped="no"/>
     <signal name="destroy" handler="gtk_widget_hide" swapped="no"/>
     <signal name="response" handler="gtk_widget_hide" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox5">
         <property name="visible">True</property>
@@ -150,11 +157,14 @@ Daniel Nylander
   <object class="GtkWindow" id="app1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="title" translatable="no">EtherApe</property>
+    <property name="title">EtherApe</property>
     <property name="default_width">620</property>
     <property name="default_height">440</property>
     <property name="icon">etherape.png</property>
     <signal name="delete-event" handler="cleanup" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox" id="vbox2">
         <property name="visible">True</property>
@@ -449,7 +459,6 @@ Daniel Nylander
                       <object class="GtkImageMenuItem" id="refresh_menuitem">
                         <property name="label" translatable="yes">Refresh</property>
                         <property name="visible">True</property>
-                        <property name="sensitive">True</property>
                         <property name="can_focus">False</property>
                         <property name="has_tooltip">True</property>
                         <property name="use_underline">True</property>
@@ -738,6 +747,9 @@ Daniel Nylander
     <property name="window_position">center</property>
     <property name="type_hint">dialog</property>
     <signal name="delete-event" handler="gtk_widget_hide" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can_focus">False</property>
@@ -914,6 +926,9 @@ Daniel Nylander
     <property name="title" translatable="yes">EtherApe: Preferences</property>
     <property name="window_position">center</property>
     <property name="type_hint">dialog</property>
+    <child>
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox2">
         <property name="visible">True</property>
@@ -1173,46 +1188,6 @@ Daniel Nylander
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">6</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkBox" id="vbox6">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="orientation">vertical</property>
-                    <child>
-                      <object class="GtkLabel" id="label9">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="halign">start</property>
-                        <property name="label" translatable="yes">Link _Width - Node Radius Ratio</property>
-                        <property name="use_underline">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="padding">2</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkScale" id="link_width_slider">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="tooltip_text" translatable="yes">Ratio between link width and node radius</property>
-                        <property name="adjustment">adjustment2</property>
-                        <property name="value_pos">right</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">4</property>
                   </packing>
                 </child>
                 <child>
@@ -1597,6 +1572,9 @@ Daniel Nylander
                     <property name="left_attach">1</property>
                     <property name="top_attach">5</property>
                   </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
             </child>
@@ -2318,6 +2296,9 @@ Daniel Nylander
     <property name="window_position">center</property>
     <property name="type_hint">dialog</property>
     <signal name="show" handler="on_protocol_edit_dialog_show" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox4">
         <property name="visible">True</property>
@@ -2452,6 +2433,9 @@ Daniel Nylander
     <property name="default_height">300</property>
     <property name="has_resize_grip">True</property>
     <signal name="delete-event" handler="on_node_info_delete_event" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox" id="vbox38">
         <property name="visible">True</property>
@@ -2821,6 +2805,9 @@ Daniel Nylander
     <property name="default_height">200</property>
     <signal name="delete-event" handler="on_nodes_wnd_delete_event" swapped="no"/>
     <child>
+      <placeholder/>
+    </child>
+    <child>
       <object class="GtkBox" id="vbox7">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
@@ -2882,6 +2869,9 @@ Daniel Nylander
   <object class="GtkWindow" id="prot_info">
     <property name="can_focus">False</property>
     <signal name="delete-event" handler="on_prot_info_delete_event" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox" id="vbox27">
         <property name="visible">True</property>
@@ -3062,6 +3052,9 @@ Daniel Nylander
     <property name="default_width">550</property>
     <property name="default_height">300</property>
     <signal name="delete-event" handler="on_delete_protocol_window" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkScrolledWindow" id="scrolledwindow4">
         <property name="visible">True</property>
