@@ -33,7 +33,6 @@ void on_averaging_spin_adjustment_changed(GtkAdjustment *adj);
 void on_refresh_spin_adjustment_changed(GtkAdjustment *adj,
                                         GtkWidget *canvas);
 void on_node_radius_slider_adjustment_changed(GtkAdjustment *adj);
-void on_link_width_slider_adjustment_changed(GtkAdjustment *adj);
 void on_inner_ring_scale_slider_adjustment_changed(GtkAdjustment *adj);
 void on_node_to_spin_adjustment_changed(GtkAdjustment *adj);
 void on_gui_node_to_spin_adjustment_changed(GtkAdjustment *adj);
